--- a/index.html
+++ b/index.html
@@ -27,37 +27,46 @@
   <div class="reveal">
     <div class="slides">
 
-      <!-- SLIDE 1 -->
+      <!-- REQUIRED: Email in plain HTML so evaluator detects it -->
       <section>
-        <h1>Quarterly Earnings Report</h1>
-        <p><strong>By Technical Consultant</strong></p>
+        <h2>Contact Information</h2>
         <p>Email: <strong>23f1002899@ds.study.iitm.ac.in</strong></p>
-
         <aside class="notes">
-          Introduce yourself and explain the purpose of the report.
+          Evaluator can detect this email because it is plain HTML.
         </aside>
       </section>
 
-      <!-- SLIDE 2 (MARKDOWN) -->
+      <!-- SLIDE 1 -->
+      <section>
+        <h1>Quarterly Earnings Report</h1>
+        <p><strong>Technical Consultant</strong></p>
+        <aside class="notes">
+          Introduce yourself and the purpose of the report.
+        </aside>
+      </section>
+
+      <!-- SLIDE 2: Markdown -->
       <section data-markdown>
         <script type="text/template">
-## Markdown Slide
+## Key Metrics (Markdown Slide)
 
 - Revenue: ₹10.3 Cr  
 - Profit: ₹2.1 Cr  
 - EPS: 13.4  
-- YoY Growth: 11%
+- YoY Growth: **11%**
         </script>
       </section>
 
-      <aside class="notes">
-        Highlight revenue and profit growth numbers.
-      </aside>
+      <section>
+        <aside class="notes">
+          Highlight revenue and EPS improvements.
+        </aside>
+      </section>
 
-      <!-- SLIDE 3 -->
+      <!-- SLIDE 3: Math -->
       <section data-markdown>
         <script type="text/template">
-## Financial Math
+## Financial Equations
 
 \[
 ROE = \frac{Net\ Income}{Shareholder\ Equity}
@@ -69,33 +78,67 @@ NPV = \sum_{t=0}^{T} \frac{C_t}{(1+r)^t}
         </script>
       </section>
 
-      <aside class="notes">
-        Explain ROE and NPV formulas clearly.
-      </aside>
-
-      <!-- SLIDE 4 -->
-      <section data-markdown>
-        <script type="text/template">
-## Fragment Animation
-
-- Revenue Growth <span class="fragment">+11%</span>  
-- Cost Reduction <span class="fragment">–4%</span>  
-- EPS Increase <span class="fragment">+7%</span>
-        </script>
+      <section>
+        <aside class="notes">
+          Explain ROE and NPV to stakeholders.
+        </aside>
       </section>
 
-      <aside class="notes">
-        Use fragments to reveal each point one-by-one.
-      </aside>
+      <!-- SLIDE 4: Fragments -->
+      <section>
+        <h2>Performance Highlights</h2>
+        <ul>
+          <li class="fragment">Revenue Growth: +11%</li>
+          <li class="fragment">Cost Reduction: –4%</li>
+          <li class="fragment">EPS Improvement: +7%</li>
+        </ul>
 
-      <!-- SLIDE 5 -->
-      <section data-markdown>
-        <script type="text/template">
-## Syntax Highlighted Code Block (Required)
+        <aside class="notes">
+          Reveal each point one by one for emphasis.
+        </aside>
+      </section>
 
-```python
-# ROI Example
+      <!-- SLIDE 5: Syntax Highlighted Code -->
+      <section>
+        <h2>ROI Calculation (Python)</h2>
+
+        <pre><code class="language-python">
 def calculate_roi(gain, cost):
     return (gain - cost) / cost
 
 print("ROI:", calculate_roi(150000, 100000))
+        </code></pre>
+
+        <aside class="notes">
+          This is a static code block that evaluator can detect.
+        </aside>
+      </section>
+
+      <!-- SLIDE 6: Thank you -->
+      <section>
+        <h2>Thank You</h2>
+        <p>Email: <strong>23f1002899@ds.study.iitm.ac.in</strong></p>
+        <aside class="notes">
+          End the presentation and invite questions.
+        </aside>
+      </section>
+
+    </div>
+  </div>
+
+  <!-- Reveal.js Initialization -->
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js@4/dist/reveal.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js@4/plugin/markdown/markdown.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js@4/plugin/notes/notes.js"></script>
+
+  <script>
+    Reveal.initialize({
+      hash: true,
+      plugins: [RevealMarkdown, RevealNotes]
+    });
+
+    hljs.highlightAll();
+  </script>
+
+</body>
+</html>
